<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@drawable/user_info"
            android:title="@string/user_info" />
        <item
            android:id="@+id/nav_buy_history"
            android:icon="@drawable/buy_history"
            android:title="@string/buy_history" />
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/points"
            android:title="@string/points" />
        <item
            android:id="@+id/nav_introduced_users"
            android:icon="@drawable/introduced_users"
            android:title="@string/introduced_users" />
        <item
            android:id="@+id/nav_introducer_code"
            android:icon="@drawable/introduced_users"
            android:title="@string/introducer_code" />
        <item
            android:id="@+id/nav_fav_list"
            android:icon="@drawable/fav_list"
            android:title="@string/fav_list" />
    </group>

</menu>

<!--
<item android:title="Communicate">
<menu>
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="Share" />
    <item
        android:id="@+id/nav_send"
        android:icon="@drawable/ic_menu_send"
        android:title="Send" />
</menu>
</item>
-->

