<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layoutDirection="rtl"
    android:padding="10dp"
    tools:context="com.etehadepaitakhtperfume.helensa.activities.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/loginlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/helensa_brand_red" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailMobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/emailMobileValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text=""
                        android:textColor="@color/textColorPrimary"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="5dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/passwordValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text=""
                        android:textColor="@color/textColorPrimary"
                        android:textDirection="ltr"
                        android:textSize="16sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/forgot_password" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/login"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="16dp"
                    app:backgroundTint="@color/colorPrimary" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/register"
                    android:textColor="@color/buttonTextColor"
                    android:textSize="16sp"
                    app:backgroundTint="@color/colorPrimary" />

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</RelativeLayout>
