<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:textColor="@color/textColorPrimary"
    tools:context="com.etehadepaitakhtperfume.helensa.activities.RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/signUpFormLinLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/nameValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:text=""
                            android:textColor="@color/textColorPrimary"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/lastNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/lastNameValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:text=""
                            android:textColor="@color/textColorPrimary"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/mobileEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/mobileValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:text=""
                            android:textColor="@color/textColorPrimary"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/passwordValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:text=""
                            android:textColor="@color/textColorPrimary"
                            android:textDirection="ltr"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordReEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginLeft="15dp">

                        <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/passwordReValue"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_re"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:text=""
                            android:textColor="@color/textColorPrimary"
                            android:textDirection="ltr"
                            android:textSize="16sp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/signUpButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/register"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="16dp"
                        app:backgroundTint="@color/colorPrimary" />

                </LinearLayout>

            </ScrollView>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
